<?xml version="1.0" encoding="utf-8"?><!--
 ~ Copyright (C) 2019 Sebi Sheldin Sebastian.
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~      http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->
<resources>
    <string name="spring_name">Spring OkHttp Interceptor</string>
    <string name="spring_notification_title">Recording HTTP activity</string>
    <string name="spring_clear">Clear</string>
    <string name="spring_browse_sql_database">Browse SQLite database</string>
    <string name="spring_overview">Overview</string>
    <string name="spring_request">Request</string>
    <string name="spring_response">Response</string>
    <string name="spring_url">URL</string>
    <string name="spring_method">Method</string>
    <string name="spring_protocol">Protocol</string>
    <string name="spring_status">Status</string>
    <string name="spring_ssl">SSL</string>
    <string name="spring_request_time">Request time</string>
    <string name="spring_response_time">Response time</string>
    <string name="spring_duration">Duration</string>
    <string name="spring_request_size">Request size</string>
    <string name="spring_response_size">Response size</string>
    <string name="spring_total_size">Total size</string>
    <string name="spring_yes">Yes</string>
    <string name="spring_no">No</string>
    <string name="spring_share">Share</string>
    <string name="spring_share_as_text">Share as text</string>
    <string name="spring_share_as_curl">Share as curl command</string>
    <string name="spring_body_omitted">(encoded or binary body omitted)</string>
    <string name="spring_search">Search</string>
    <string name="spring_body_unexpected_eof">\n\n--- Unexpected end of content ---</string>
    <string name="spring_body_content_truncated">\n\n--- Content truncated ---</string>
    <string name="spring_notification_category">Spring HTTP notifications</string>
    <string name="spring_override">Override</string>
    <string name="override_urls_containing_the_string_s">Override url(s) containing the string(s)\nNote:You can give entire urls or keywords to match with</string>
    <string name="spring_txt_save">Save</string>
    <string name="select_the_method_type_to_override">Select the method type to override</string>
    <string name="replace_matched_url_with">Replace matched url with</string>
    <string name="replacement_rule">Replacement Rule</string>
    <string name="spring_key">Key</string>
    <string name="spring_value">Value</string>
    <string name="spring_replacement_response">Replacement response</string>
    <string name="spring_replace_add_headers">Replace/Add Headers</string>
    <string name="spring_change_response_type_to">Change response type to</string>
    <string name="spring_change_method_type_to">Change method type to</string>
    <string name="spring_text_to_replace_in_original_url">Text to replace in original url</string>
</resources>
