<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".internal.ui.SpringOverrideRuleCreatorActivity"
    tools:showIn="@layout/spring_activity_override_rules">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/override_urls_containing_the_string_s"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/extra_strings_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="1"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/spring_list_item_add"
                tools:orientation="vertical"
                tools:scrollbars="vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/select_the_method_type_to_override"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/url_methods"
                android:prompt="@string/select_the_method_type_to_override"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/replace_matched_url_with"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/replacement_rules"
                android:prompt="@string/replacement_rule"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/spring_replacement_url_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:enabled="false"
                android:hint="@string/spring_text_to_replace_in_original_url" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/spring_change_method_type_to"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/url_methods_to_change_to"
                android:prompt="@string/select_the_method_type_to_override"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/spring_change_response_type_to"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/replacement_response_rules"
                android:prompt="@string/select_the_method_type_to_override"
                android:spinnerMode="dialog" />

            <EditText
                android:id="@+id/spring_replacement_response"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:enabled="false"
                android:hint="@string/spring_replacement_response" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/spring_replace_add_headers"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/replace_header_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="1"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/spring_list_item_add"
                tools:orientation="vertical"
                tools:scrollbars="vertical" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp" />

        </LinearLayout>

    </ScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/override_rule_save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="32dp"
        android:text="@string/spring_txt_save"
        app:srcCompat="@drawable/vector_save" />

</RelativeLayout>